--- a/_includes/section.html
+++ b/_includes/section.html
@@ -1,3 +1,4 @@
-<section>
-  <div class="max-w-screen-xl mx-auto py-20 px-10">{{ include.content }}</div>
+<section class="flex flex-col justify-center items-stretch gap-10">
+  <h3 id="{{ include.title }}">{{ include.title }}</h3>
+  {{ include.content }}
 </section>
