--- a/_includes/about.html
+++ b/_includes/about.html
@@ -1,11 +1,5 @@
 <div
-  class="
-    grid grid-cols-1
-    md:grid-cols-3
-    gap-10
-    justify-items-center
-    items-center
-  "
+  class="flex justify-center items-center flex-col md:flex-row gap-10"
   data-fade
 >
   <img
@@ -14,29 +8,14 @@
     alt=""
     loading="lazy"
   />
-  <p class="col-span-1 md:col-span-2" data-fade>
-    {{ site.data.about.description }}
-  </p>
+  <p class="flex-grow-1" data-fade>{{ site.data.about.description }}</p>
 </div>
-<div class="flex flex-wrap justify-center mt-10">
+
+<div class="flex flex-wrap justify-center gap-5">
   {% for link in site.data.about.links %}
-  <a
-    href="{{ link.url }}"
-    class="
-      group
-      inline-flex
-      items-center
-      m-1
-      py-4
-      px-4
-      max-w-full
-      no-underline
-      hover:bg-gray-100
-    "
-    data-fade
-  >
-    <i class="{{ link.icon }} mr-3 text-gray-700"></i>
-    <span class="text-gray-700 font-medium">{{ link.text }}</span>
+  <a href="{{ link.url }}" class="button" data-fade>
+    <i class="{{ link.icon }}"></i>
+    <span>{{ link.text }}</span>
   </a>
   {% endfor %}
 </div>
