--- a/_includes/follow.html
+++ b/_includes/follow.html
@@ -1,33 +1,14 @@
-<div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-10 items-start">
-  {% for col in site.data.follow %}
-  <div class="flex flex-col items-center flex-wrap">
-    <div class="flex">
-      {% for link in col.links %}
-      <a
-        href="{{ link.url }}"
-        class="
-          group
-          flex
-          justify-center
-          items-center
-          w-16
-          h-16
-          m-1
-          rounded-full
-          hover:bg-gray-100
-          no-underline
-        "
-        aria-label="{{ link.tooltip }}"
-        data-tooltip="{{ link.tooltip }}"
-        data-fade
-      >
-        <i class="{{ link.icon }} block text-2xl text-gray-700"></i>
-      </a>
-      {% endfor %}
-    </div>
-    <p class="mt-3" data-fade>
-      {% include markdownify.html content=col.text %}
-    </p>
-  </div>
+<div class="flex justify-center items-center flex-wrap gap-5">
+  {% for link in site.data.follow %}
+  <a
+    href="{{ link.url }}"
+    class="button"
+    data-fade
+    data-tooltip="{% include markdownify.html content=link.tooltip %}"
+    aria-label="{{ link.tooltip | markdownify | strip_html }}"
+  >
+    <i class="{{ link.icon }}"></i>
+    <span>{{ link.text }}</span>
+  </a>
   {% endfor %}
 </div>
