--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,4 +1,4 @@
-<footer class="relative w-full bg-black text-white p-10 text-center">
+<footer>
   Copyright &copy;
   <script>
     document.write(new Date().getFullYear());
