--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,19 +1,12 @@
-<header class="relative w-full bg-black text-white py-20 px-8">
+<header class="relative">
   {% include waves.html %}
-  <div class="relative mx-auto text-center">
-    <a
-      href="/"
-      class="inline-block w-28 mx-auto p-5"
-      aria-label="Home page"
-      data-fade
-    >
-      {% include logo.svg class="w-full" %}
-    </a>
-    <h1 class="text-3xl font-light uppercase tracking-wider" data-fade="200">
-      Vincent Rubinetti
-    </h1>
-    <h2 class="text-gray-300 text-xl tracking-wide mt-3" data-fade="400">
-      composer, producer, more
-    </h2>
-  </div>
+  <a href="/" class="w-16 mx-auto" aria-label="Home page" data-fade>
+    {% include logo.svg class="w-full" %}
+  </a>
+  <h1 class="text-2xl font-light uppercase tracking-wider" data-fade="200">
+    Vincent Rubinetti
+  </h1>
+  <h2 class="text-lg tracking-wide font-light" data-fade="400">
+    composer, producer, more
+  </h2>
 </header>
