--- a/_includes/studio.html
+++ b/_includes/studio.html
@@ -1,10 +1,9 @@
-<h3 class="text-center text-lg font-medium mb-20">Studio Setup</h3>
-<img src="images/studio.jpg" class="w-full mb-20" loading="lazy" />
+<img src="images/studio.jpg" class="w-full" loading="lazy" />
 <div class="grid grid-cols-1 md:grid-cols-2 gap-10">
   {% for item in site.data.studio %}
   <div>
     <h4 class="mb-5 font-medium uppercase">{{ item[0] }}</h4>
-    <ul class="">
+    <ul>
       {% for li in item[1] %}
       <li class="my-3">{{ li }}</li>
       {% endfor %}
