--- a/_includes/work.html
+++ b/_includes/work.html
@@ -1,60 +1,57 @@
-<div id="work_player"></div>
-<div class="grid grid-cols-2 md:grid-cols-3 lg:grid-cols-4 gap-5">
+<div id="work_player" class="flex flex-col gap-5"></div>
+
+<div
+  class="grid grid-cols-2 md:grid-cols-3 lg:grid-cols-4 gap-5"
+  role="tablist"
+>
   {% for work in site.data.work %} {% assign src = "" %} {% if work.playlist %}
   {% capture src %}https://www.youtube.com/embed/videoseries?list={{
   work.playlist }}&autoplay=1{% endcapture %} {% elsif work.video %} {% capture
   src %}https://www.youtube.com/embed/{{ work.video }}?autoplay=1{% endcapture
-  %} {% endif %}
+  %} {% endif %} {% assign id = work.title | split: " " | join: "_" | downcase
+  %}
 
   <template>
-    <div class="mb-20">
-      <div class="-full mb-10 aspect-w-16 aspect-h-9">
-        <iframe
-          src="{{ src }}"
-          allowfullscreen
-          title="Video player"
-          loading="lazy"
-          data-fade
-        ></iframe>
-      </div>
-      <h3 class="text-lg font-medium mb-5" data-fade>{{ work.title }}</h3>
-      <p
-        class="grid gap-h-5 mt-5"
-        style="grid-template-columns: 80px 1fr"
-        data-fade
-      >
-        <b>Credits</b>
-        <span class="text-left">
-          {% include markdownify.html content=work.credits %}
-        </span>
-        <b>Genre</b>
-        <span class="text-left">
-          {% include markdownify.html content=work.genre %}
-        </span>
-      </p>
-      <p class="mt-5" data-fade>
-        {% include markdownify.html content=work.description %}
-      </p>
-      <div class="mt-5 text-left">
-        {% for link in work.links %}
-        <a
-          href="{{ link.url }}"
-          class="group inline-flex items-center m-1 py-2 px-4 max-w-full no-underline hover:bg-gray-100"
-          data-fade
-        >
-          <i class="{{ link.icon }} mr-3 text-gray-700"></i>
-          <span class="text-gray-700 font-medium truncate"
-            >{{ link.text }}</span
-          >
-        </a>
-        {% endfor %}
-      </div>
+    <iframe
+      class="w-full"
+      style="aspect-ratio: 16 / 9; min-height: 200px"
+      src="{{ src }}"
+      allowfullscreen
+      title="Video player"
+      loading="lazy"
+      role="tabpanel"
+      data-fade
+    ></iframe>
+    <h4 class="text-lg font-medium" data-fade>{{ work.title }}</h4>
+    <p class="grid gap-h-5" style="grid-template-columns: 80px 1fr" data-fade>
+      <b>Credits</b>
+      <span class="text-left">
+        {% include markdownify.html content=work.credits %}
+      </span>
+      <b>Genre</b>
+      <span class="text-left">
+        {% include markdownify.html content=work.genre %}
+      </span>
+    </p>
+    <p data-fade>{% include markdownify.html content=work.description %}</p>
+    <div class="flex flex-wrap gap-5">
+      {% for link in work.links %}
+      <a href="{{ link.url }}" class="button" data-fade>
+        <i class="{{ link.icon }}"></i>
+        <span class="truncate">{{ link.text }}</span>
+      </a>
+      {% endfor %}
     </div>
   </template>
+
   <button
+    id="work_button_{{ id }}"
     class="group relative overflow-hidden"
     onclick="selectWork(this, event)"
     data-fade
+    role="tab"
+    aria-controls="work_player"
+    aria-label="{{ work.title }}"
   >
     <img src="{{ work.image }}" alt="" loading="lazy" />
     <div
@@ -66,29 +63,39 @@
   {% endfor %}
 </div>
 
+<a class="button self-center" href="https://vincerubinetti.bandcamp.com/">
+  <i class="fas fa-arrow-right"></i>
+  <span>All the rest</span>
+</a>
+
 <script type="module">
   // get dom elements
   const player = document.getElementById("work_player");
   const gallery = player.nextElementSibling;
+  const buttons = gallery.querySelectorAll("button");
 
   // show contents of template before button in player frame
   window.selectWork = (button, event) => {
-    player.innerHTML = button.previousElementSibling.innerHTML;
+    buttons.forEach((button) => button.setAttribute("aria-selected", false));
+
+    // if user clicked
     if (event.isTrusted) {
+      player.innerHTML = button.previousElementSibling.innerHTML;
       const options = { behavior: "smooth", block: "start" };
       player.closest("section").scrollIntoView(options);
     }
+    // if javascript clicked
+    else {
+      player.innerHTML = button.previousElementSibling.innerHTML.replaceAll(
+        "autoplay=1",
+        ""
+      );
+    }
+
+    player.setAttribute("aria-labelledby", button.id);
+    button.setAttribute("aria-selected", true);
   };
 
-  // when player comes into view for first time
-  new IntersectionObserver(([{ isIntersecting }], observer) => {
-    if (isIntersecting) {
-      // select first work by default
-      Array.from(gallery.children)
-        .find((child) => child.matches("button"))
-        .click();
-      // only select once
-      observer.disconnect();
-    }
-  }).observe(player);
+  // select first work by default
+  buttons[0].click();
 </script>
