--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,7 +1,5 @@
 <!DOCTYPE html>
 <html lang="en-US">
-  {% include head.html %}
-  {% include header.html %}
-  {% include main.html %}
-  {% include footer.html %}
+  {% include head.html %} {% include header.html %} {% include main.html %} {%
+  include footer.html %} {% include tooltip.html %}
 </html>
