--- a/_includes/follow.html
+++ b/_includes/follow.html
@@ -1,4 +1,6 @@
-<div class="flex justify-center items-center flex-wrap gap-5">
+<div
+  class="grid justify-center items-center grid-cols-1 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4 xl:flex gap-5"
+>
   {% for link in site.data.follow %}
   <a
     href="{{ link.url }}"
