--- a/_includes/work.html
+++ b/_includes/work.html
@@ -54,11 +54,11 @@
     aria-label="{{ work.title }}"
   >
     <img src="{{ work.image }}" alt="" loading="lazy" />
-    <div
+    <span
       class="absolute inset-0 flex justify-center items-center p-5 bg-black text-white font-medium opacity-0 group-hover:opacity-100 transition-default duration-300"
     >
       {{ work.title }}
-    </div>
+    </span>
   </button>
   {% endfor %}
 </div>
