--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,12 +1,12 @@
 <header class="relative">
   {% include waves.html %}
-  <a href="/" class="w-16 mx-auto" aria-label="Home page" data-fade>
+  <a href="/" class="w-16 mx-auto z-10" aria-label="Home page" data-fade>
     {% include logo.svg class="w-full" %}
   </a>
-  <h1 class="text-2xl font-light uppercase tracking-wider" data-fade="200">
+  <h1 class="text-2xl font-light uppercase tracking-wider z-10" data-fade="200">
     Vincent Rubinetti
   </h1>
-  <h2 class="text-lg tracking-wide font-light" data-fade="400">
+  <h2 class="text-lg tracking-wide font-light z-10" data-fade="400">
     composer, producer, more
   </h2>
 </header>
