--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,5 +1,8 @@
 <!DOCTYPE html>
 <html lang="en-US">
-  {% include head.html %} {% include header.html %} {% include main.html %} {%
-  include footer.html %} {% include tooltip.html %}
+  {% include head.html %}
+  <body class="flex flex-col">
+    {% include header.html %} {% include main.html %} {% include footer.html %}
+    {% include tooltip.html %}
+  </body>
 </html>
