--- a/_includes/waves.html
+++ b/_includes/waves.html
@@ -1,7 +1,6 @@
 <canvas
   id="waves"
-  class="absolute inset-0 w-full h-full max-w-xl mx-auto"
-  style="z-index: -1"
+  class="absolute inset-0 w-full h-full max-w-xl mx-auto opacity-40"
 ></canvas>
 <!-- overlay -->
 <div
@@ -10,11 +9,10 @@
     background: linear-gradient(
       90deg,
       #000000 0%,
-      #00000080 25%,
-      #00000080 75%,
+      #00000000 25%,
+      #00000000 75%,
       #000000 100%
     );
-    z-index: -1;
   "
 ></div>
 
