--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,6 +3,6 @@
   {% include head.html %}
   <body class="flex flex-col">
     {% include header.html %} {% include main.html %} {% include footer.html %}
-    {% include tooltip.html %}
+    {% include tooltip.html %} {% include fade.html %}
   </body>
 </html>
