--- a/_includes/about.html
+++ b/_includes/about.html
@@ -11,7 +11,9 @@
   <p class="flex-grow-1" data-fade>{{ site.data.about.description }}</p>
 </div>
 
-<div class="flex flex-wrap justify-center gap-5">
+<div
+  class="grid justify-center items-center grid-cols-1 md:grid-cols-2 lg:flex flex-wrap gap-5"
+>
   {% for link in site.data.about.links %}
   <a href="{{ link.url }}" class="button" data-fade>
     <i class="{{ link.icon }}"></i>
