--- a/_includes/follow.html
+++ b/_includes/follow.html
@@ -1,5 +1,5 @@
 <div
-  class="grid justify-center items-center grid-cols-1 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4 xl:flex gap-5"
+  class="grid justify-center items-center grid-cols-1 sm:grid-cols-2 md:grid-cols-3 lg:flex gap-5"
 >
   {% for link in site.data.follow %}
   <a
@@ -7,7 +7,7 @@
     class="button"
     data-fade
     data-tooltip="{% include markdownify.html content=link.tooltip %}"
-    aria-label="{{ link.tooltip | markdownify | strip_html }}"
+    aria-label="{{ link.text }} - {{ link.tooltip | markdownify | strip_html }}"
   >
     <i class="{{ link.icon }}"></i>
     <span>{{ link.text }}</span>
