--- a/src/global/styles.css
+++ b/src/global/styles.css
@@ -1,18 +1,19 @@
 :root {
+  --tiny: 0.9rem;
   --medium: 1rem;
   --large: 1.2rem;
   --xl: 1.5rem;
 
-  --red: #f43f5e;
-  --purple: #a855f7;
-  --blue: #0ea5e9;
-  --green: #10b981;
-  --orange: #f97316;
+  --off-white: #f0f0f0;
+  --light-gray: #d0d0d0;
+  --gray: #a0a0a0;
+  --dark-gray: #404040;
 
-  --gray: #d0d0d0;
-
-  --rounded: 3px;
+  --rounded: 5px;
   --fast: 0.2s ease;
+  --small-shadow: 1px 2px 10px #00000020;
+  --shadow: 2px 3px 5px #00000040;
+  --big-shadow: 0 0 100px #a855f780;
 }
 
 * {
@@ -46,9 +47,13 @@ button {
   cursor: pointer;
   font: inherit;
   transition: var(--fast);
-  transition-property: background, color;
+  transition-property: background, color, box-shadow, transform;
 }
 
 pre {
   font: inherit;
+}
+
+svg > path {
+  fill: currentColor;
 }
