--- a/src/global/styles.css
+++ b/src/global/styles.css
@@ -1,19 +1,16 @@
 :root {
-  --tiny: 0.9rem;
+  --tiny: 0.85rem;
   --medium: 1rem;
   --large: 1.2rem;
   --xl: 1.5rem;
 
-  --off-white: #f0f0f0;
-  --light-gray: #d0d0d0;
-  --gray: #a0a0a0;
-  --dark-gray: #404040;
+  --primary: #e91e63;
+  --primary-light: #f48fb1;
 
   --rounded: 5px;
   --fast: 0.2s ease;
-  --small-shadow: 1px 2px 10px #00000020;
-  --shadow: 2px 3px 5px #00000040;
-  --big-shadow: 0 0 100px #a855f780;
+  --shadow: 1px 2px 10px #00000020;
+  --big-shadow: 0 0 60px #6e3b8580;
 }
 
 * {
@@ -56,4 +53,13 @@ pre {
 
 svg > path {
   fill: currentColor;
+}
+
+a {
+  color: var(--primary);
+  transition: color var(--fast);
+}
+
+a:hover {
+  color: black;
 }
