more player and header work

--- a/src/global/styles.css
+++ b/src/global/styles.css
@@ -4,13 +4,16 @@
   --large: 1.2rem;
   --xl: 1.5rem;
 
-  --primary: #e91e63;
-  --primary-light: #f48fb1;
+  --a: #e91e63;
+  --b: #9c27b0;
+  --c: #2196f3;
+  --dark: #40404f;
 
   --rounded: 5px;
   --fast: 0.2s ease;
   --shadow: 1px 2px 10px #00000020;
-  --big-shadow: 0 0 60px #6e3b8580;
+  --shadow-inset: inset 1px 2px 5px #00000020;
+  --big-shadow: 0 0 100px #9c27b080;
 }
 
 * {
@@ -23,6 +26,7 @@ body {
   font-family: "Roboto";
   font-weight: 300;
   font-size: 14pt;
+  color: var(--dark);
   line-height: 2;
 }
 
@@ -42,6 +46,7 @@ button {
   background: none;
   padding: 0;
   cursor: pointer;
+  color: inherit;
   font: inherit;
   transition: var(--fast);
   transition-property: background, color, box-shadow, transform;
@@ -56,10 +61,10 @@ svg > path {
 }
 
 a {
-  color: var(--primary);
+  color: var(--a);
   transition: color var(--fast);
 }
 
-a:hover {
+a:where(:hover, :focus) {
   color: black;
 }
