fixes and discography section

--- a/src/global/styles.css
+++ b/src/global/styles.css
@@ -10,8 +10,7 @@
   --secondary-light: #ea80fc;
   --tertiary: #2196f3;
   --tertiary-light: #82b1ff;
-  --light: #e0e0ef;
-  --dark: #40404f;
+  --gray: #40404f;
 
   --rounded: 5px;
   --fast: 0.2s ease;
@@ -31,7 +30,7 @@ body {
   font-family: "Roboto";
   font-weight: 300;
   font-size: 14pt;
-  color: var(--dark);
+  letter-spacing: 0.25px;
   line-height: 2;
 }
 
@@ -45,23 +44,9 @@ main {
   flex-grow: 1;
 }
 
-button {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  border-radius: var(--rounded);
-  border: none;
-  background: none;
-  padding: 0;
-  cursor: pointer;
-  color: inherit;
-  font: inherit;
-  transition: var(--fast);
-  transition-property: background, color, box-shadow, transform;
-}
-
-pre {
-  font: inherit;
+p {
+  margin: 0;
+  text-align: justify;
 }
 
 a {
@@ -73,87 +58,9 @@ a:where(:hover, :focus) {
   color: var(--tertiary);
 }
 
-.button {
-  position: relative;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  gap: 10px;
-  padding: 5px 15px;
-}
-
-[data-draw="true"] path {
-  stroke-dasharray: var(--length);
-  animation: draw 1s both;
-}
-
-@keyframes draw {
-  0% {
-    stroke-dashoffset: var(--length);
-    stroke: var(--primary-light);
-  }
-  33% {
-    stroke: var(--secondary-light);
-  }
-  66% {
-    stroke: var(--tertiary-light);
-  }
-  100% {
-    stroke-dashoffset: 0;
-  }
-}
-
-.button:where(:hover, :focus) {
-  box-shadow: var(--shadow);
-  transform: translate(-1px, -1px);
-}
-
-.button:active {
-  box-shadow: var(--shadow-inset);
-  transform: translate(0, 0);
-}
-
-.button-fancy:after {
-  content: "";
-  position: absolute;
-  inset: 0;
-  border: solid 2px transparent;
-  border-radius: inherit;
-}
-
-.button-fancy:where(:hover, :focus):after {
-  animation: outline 0.3s linear;
-}
-
-@keyframes outline {
-  0%,
-  100% {
-    border-color: transparent;
-    clip-path: inset(0 0 97% 0);
-  }
-
-  25% {
-    border-color: var(--primary);
-    clip-path: inset(0 97% 0 0);
-  }
-  50% {
-    border-color: var(--secondary);
-    clip-path: inset(97% 0 0 0);
-  }
-  75% {
-    border-color: var(--tertiary);
-    clip-path: inset(0 0 0 97%);
-  }
-}
-
-.button-fancy[data-active="true"] {
-  background: var(--dark);
-  color: var(--light);
-}
-
 .tippy-box {
   max-width: min(90vw, 500px) !important;
-  background: var(--dark) !important;
+  background: var(--gray) !important;
   border-radius: var(--rounded) !important;
   font-size: var(--tiny) !important;
   box-shadow: var(--big-shadow);
@@ -161,13 +68,13 @@ a:where(:hover, :focus) {
 
 .tippy-content {
   padding: 20px !important;
-  line-height: 1.8em;
+  line-height: 1.5em;
   max-height: 300px !important;
   overflow-y: auto;
 }
 
 .tippy-arrow {
-  color: var(--dark) !important;
+  color: var(--gray) !important;
 }
 
 .tippy-box a {
