--- a/src/global/styles.css
+++ b/src/global/styles.css
@@ -17,6 +17,7 @@
   --shadow: 1px 2px 10px #00000020;
   --shadow-inset: inset 1px 1px 5px #00000010;
   --big-shadow: 2px 4px 20px #00000040;
+  --color-shadow: 0 0 50px -5px var(--secondary);
 }
 
 * {
@@ -57,6 +58,10 @@ a {
 
 a:where(:hover, :focus) {
   color: var(--tertiary);
+}
+
+svg {
+  overflow: visible;
 }
 
 [data-draw="true"]:where(:hover, :focus) path {
