--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -11,6 +11,18 @@ const { title } = Astro.props;
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <script
+      async
+      src="https://www.googletagmanager.com/gtag/js?id=UA-42575210-1"
+    ></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      window.dataLayer.push(["js", new Date()]);
+      window.dataLayer.push(["config", "UA-42575210-1"]);
+    </script>
+
+    <script src="https://www.google.com/recaptcha/api.js" async defer></script>
+
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width" />
     <link rel="icon" type="image/svg+xml" href="/logo.svg" />
