--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -10,7 +10,7 @@ import Footer from "@/components/TheFooter.vue";
 ---
 
 <Layout title="Vincent Rubinetti | Composer, producer, and more">
-  <Header client:idle />
+  <Header client:idle big={true} />
   <main>
     <Listen client:idle />
     <Follow client:idle />
