--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -3,12 +3,15 @@ import "@/global/styles.css";
 
 export interface Props {
   title: string;
+  description: string;
 }
 
-const { title } = Astro.props;
+const { title, description } = Astro.props;
+
+const url = "https://vincentrubinetti.com";
+const share = "share.jpg";
 ---
 
-<!DOCTYPE html>
 <html lang="en">
   <head>
     <script
@@ -23,8 +26,25 @@ const { title } = Astro.props;
 
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width" />
+
     <link rel="icon" type="image/svg+xml" href="/logo.svg" />
+
     <title>{title}</title>
+
+    <meta name="title" content={title} />
+    <meta name="description" content={description} />
+
+    <meta property="og:title" content={title} />
+    <meta property="og:description" content={description} />
+    <meta property="og:url" content={url} />
+    <meta property="og:image" content={share} />
+    <meta property="og:type" content="website" />
+
+    <meta property="twitter:card" content="summary_large_image" />
+    <meta property="twitter:title" content={title} />
+    <meta property="twitter:description" content={description} />
+    <meta property="twitter:url" content={url} />
+    <meta property="twitter:image" content={share} />
 
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
