--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -9,7 +9,10 @@ import Contact from "@/pages/home/Contact.vue";
 import Footer from "@/components/TheFooter.vue";
 ---
 
-<Layout title="Vincent Rubinetti | Composer, producer, and more">
+<Layout
+  title="Vincent Rubinetti | Composer, producer, and more"
+  description="Composer for media. Orchestral, electronic, and a wide variety of other styles. "
+>
   <Header client:idle big={true} />
   <main>
     <Listen client:idle />
