--- a/src/pages/studio.astro
+++ b/src/pages/studio.astro
@@ -5,7 +5,10 @@ import Layout from "@/layouts/Layout.astro";
 import Footer from "@/components/TheFooter.vue";
 ---
 
-<Layout title="Studio | Vincent Rubinetti">
+<Layout
+  title="Studio | Vincent Rubinetti"
+  description="My studio setup. Instruments, equipment, software, plugins, etc."
+>
   <Header client:idle />
   <main>
     <Studio client:idle />
