--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,5 +1,8 @@
 ---
+import "@/components/AppSection.vue";
+import "@/components/AppButton.vue";
 import "@/global/styles.css";
+import "tippy.js/dist/tippy.css";
 
 export interface Props {
   title: string;
