--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -17,7 +17,7 @@ import Footer from "@/components/TheFooter.vue";
   <main>
     <Listen client:load />
     <Follow client:idle />
-    <Highlights client:visible />
+    <Highlights client:idle />
     <About client:idle />
     <Contact client:idle />
   </main>
