--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,36 +1,15 @@
 ---
-import Logo from "@/assets/vr.svg";
-import Player from "@/pages/_player.astro";
-import "@/styles.css";
+import Layout from "@/layouts/Layout.astro";
+import Listen from "@/pages/home/Listen.vue";
+import Title from "@/pages/home/Title.vue";
 ---
 
-<html lang="en" class="font-sans font-light">
-  <head>
-    <meta charset="utf-8" />
-    <link rel="icon" type="image/svg+xml" href="/icon.svg" />
-    <meta name="viewport" content="width=device-width" />
-
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Outfit:wght@100..900&display=swap"
-      rel="stylesheet"
-    />
-
-    <title>Vincent Rubinetti</title>
-  </head>
-
-  <body class="flex min-h-screen flex-col">
-    <header class="bg-zinc-900 text-white">
-      <section class="gap-2! text-center">
-        <Logo class="size-12" />
-        <h1 class="text-2xl tracking-wider uppercase">Vincent Rubinetti</h1>
-        <div class="font-thin tracking-widest lowercase">
-          Composer • Developer • More
-        </div>
-      </section>
-    </header>
-
-    <Player />
+<Layout
+  title="Vincent Rubinetti"
+  description="Composer for media. Orchestral, electronic, and a wide variety of other styles."
+>
+  <body>
+    <Title />
+    <Listen client:load />
   </body>
-</html>
+</Layout>
