start to typescriptify soundcloud widget

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -10,6 +10,6 @@ import Title from "@/pages/home/Title.vue";
 >
   <body>
     <Title />
-    <Listen client:load />
+    <Listen client:only />
   </body>
 </Layout>
