--- a/src/styles.css
+++ b/src/styles.css
@@ -21,10 +21,23 @@ svg {
   @apply shrink-0;
 }
 
-button {
-  @apply inline-flex cursor-pointer items-center justify-center gap-2 p-2 transition-all;
+a {
+  @apply text-sky-500 underline underline-offset-2 transition-all hover:text-current;
+}
+
+button,
+.button {
+  @apply inline-flex cursor-pointer items-center justify-center gap-2 p-2 text-current transition-all hover:bg-current/10;
 }
 
 .lucide {
   @apply h-[1em] w-[unset];
+}
+
+.lucide * {
+  @apply [stroke-linecap:butt]! [stroke-linejoin:miter]!;
+}
+
+.lucide-play {
+  @apply fill-current stroke-0;
 }
