--- a/src/styles.css
+++ b/src/styles.css
@@ -13,6 +13,7 @@ body {
   @apply flex min-h-screen flex-col;
 }
 
+header,
 section {
   @apply flex flex-col items-center gap-8 px-[max(--spacing(8),(100%---spacing(200))/2)] py-8;
 }
