--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -11,7 +11,7 @@ import Layout from "@/layouts/Layout.astro";
 >
   <body>
     <header class="relative z-0 bg-zinc-900 text-white">
-      <Background client:only class="absolute inset-0 size-full -z-10" />
+      <Background client:only class="absolute inset-0 -z-10 size-full" />
       <Title />
       <Listen client:only />
     </header>
